# ell-adventure

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: system-design.md
notebooks/: generation-experiments.ipynb
src/adventure/: __main__.py
src/ui/: __init__.py  main_menu.py  settings_screen.py
src/ui/styles/: main_menu.tcss  settings_screen.css  settings_screen.tcss
